objects/LLC_BI__Connection__c.object
<CustomObject>
    <description>The Connection Object is used to connect relationships together outside of entity involvement.  IE Parent and children relationships, spouses, etc.</description>
    <fields>
        <fullName>CF_Control_Prong__c</fullName>
        <label>Control Prong</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Entity_Prong__c</fullName>
        <label>Entity Prong</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>E2E_Role__c</fullName>
        <description>Used to put the filter on credit memo</description>
        <formula>LLC_BI__Connection_Role__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__BenflOwnInfo_TINCode__c</fullName>
        <description>The Users populate this optional field to define the type of TIN code.  By default, it is blank.</description>
        <label>Beneficial Owner TINCode Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OTHER</fullName>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>PASSPORT</fullName>
                    <label>Passport</label>
                </value>
                <value>
                    <fullName>TAXID</fullName>
                    <label>Tax ID</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__BenflOwnType__c</fullName>
        <description>The Users populate this required field to define the type of beneficial owner information.  By default, it is Beneficial Owners.</description>
        <label>Beneficial Owner Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Own</fullName>
                    <default>true</default>
                    <label>Beneficial owners</label>
                </value>
                <value>
                    <fullName>CntlOwn</fullName>
                    <label>Both controlling individual and beneficial owner</label>
                </value>
                <value>
                    <fullName>Cntl</fullName>
                    <label>Controlling individual/significant responsibility</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__IdVerifyRsnCode__c</fullName>
        <description>The Users populate this required field to define the reason code for beneficial owner information.  By default, it is blank.</description>
        <label>Verification Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AR</fullName>
                    <label>Account Revision</label>
                </value>
                <value>
                    <fullName>CO</fullName>
                    <label>Change in Occupation/Nature of Business</label>
                </value>
                <value>
                    <fullName>MN</fullName>
                    <label>General Maintenance to CIF</label>
                </value>
                <value>
                    <fullName>NA</fullName>
                    <label>New Account</label>
                </value>
                <value>
                    <fullName>NE</fullName>
                    <label>Non-Triggering Event</label>
                </value>
                <value>
                    <fullName>OC</fullName>
                    <label>Ownership Changes</label>
                </value>
                <value>
                    <fullName>PC</fullName>
                    <label>Product Change</label>
                </value>
                <value>
                    <fullName>ST</fullName>
                    <label>Significant Transaction Activity Changes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Certifying_Individual__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users manually populate this optional checkbox field. This field is used indicate whether the individual is a certifying individual. By default, this field is not checked.</description>
        <inlineHelpText>Selecting the Certifying Individual is only needed on ONE Relationship. This is needed on the individual where the Control Prong is YES and who will be signing the Beneficial Ownership Certification Document.</inlineHelpText>
        <label>Certifying Individual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Connected_From__c</fullName>
        <description>This field is a look up field to relationships that serve as the &quot;connected from&quot; relationship.</description>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Connections</relationshipLabel>
        <relationshipName>Connected_To</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Connected_To__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is a look up field to relationships that serve as the &quot;connected to&quot; relationship.</description>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Connected From</relationshipLabel>
        <relationshipName>Connected_From</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Connection_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is a lookup field to the connection role. This is used to specify the capacity of which two relationships are connected. (ie. Spouse, Parent, Child, Owner, Company, etc.)</description>
        <label>Role</label>
        <referenceTo>LLC_BI__Connection_Role__c</referenceTo>
        <relationshipLabel>Connections</relationshipLabel>
        <relationshipName>Connections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Controlling_Individual__c</fullName>
        <description>Users manually populate this optional picklist field. This field is used to determine the role of the controlling individual. By default, it is blank.</description>
        <label>Controlling Individual</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Executive Officer or Senior Manager</fullName>
                </value>
                <value>
                    <fullName>Other Person Performing Similar Function</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>This field is a free form text field, used to enter in details/ description of the connection</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Indirect_Ownership_Percent__c</fullName>
        <description>Users manually populate this optional field. This field is used to capture the indirect ownership percentage.</description>
        <label>Indirect Ownership Percent</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>The system automatically populates this checkbox to indicate if the connection is active or inactive.</description>
        <inlineHelpText>This system-populated field indicates if the connection is active or inactive.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Official_Title__c</fullName>
        <description>Users manually populate this optional text field. This field is used to indicate the official title of the Beneficial Owner.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Official Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Ownership_Percent__c</fullName>
        <description>Indicates the percentage of ownership.</description>
        <label>Ownership Percent</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Reciprocal_Role__c</fullName>
        <description>Deprecated Field. no longer in use</description>
        <label>-D Reciprocal Role</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Role__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Connection</fullName>
                    <default>true</default>
                    <label>Connection</label>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Sibling</fullName>
                </value>
                <value>
                    <fullName>Spouse/Life Partner</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Colleague</fullName>
                </value>
                <value>
                    <fullName>Business Partner</fullName>
                </value>
                <value>
                    <fullName>Subsidiary</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Related</fullName>
                </value>
                <value>
                    <fullName>Affiliated Company</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Role__c</fullName>
        <description>Deprecated field, no longer in use</description>
        <label>-D Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Sibling</fullName>
                </value>
                <value>
                    <fullName>Spouse/Life Partner</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Colleague</fullName>
                </value>
                <value>
                    <fullName>Business Partner</fullName>
                </value>
                <value>
                    <fullName>Subsidiary</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Co-Owner</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Related</fullName>
                </value>
                <value>
                    <fullName>Officer</fullName>
                </value>
                <value>
                    <fullName>Affiliated Company</fullName>
                </value>
                <value>
                    <fullName>Connection</fullName>
                    <default>true</default>
                    <label>Connection</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>This field is automatically populated via formula. It stores in plaintext the value of the LLC_BI__Status__c picklist from the relationship the &quot;connected to&quot; field is referencing.</description>
        <formula>Text(LLC_BI__Connected_To__r.LLC_BI__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Direct_Indirect_Ownership_Percent__c</fullName>
        <description>The system automatically populates this field with the sum of the direct and indirect ownership percentages.</description>
        <formula>LLC_BI__Ownership_Percent__c + LLC_BI__Indirect_Ownership_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Direct/Indirect Ownership Percent</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <description>This field is a formula field, used to specify the type of relationship the &quot;connected to&quot; look-up is referring to.</description>
        <formula>TEXT(LLC_BI__Connected_To__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__UID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Auto-generated unique identifier for this connection.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Auto-generated unique identifier for this connection.</inlineHelpText>
        <label>UID</label>
        <length>54</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nPortal__Connection_To_Account__c</fullName>
        <description>Portal users populate this picklist field to display the role of the person attached to the account in Online Application. This is a UI field for the Customer Engagement Solution; it does not replace the role of the person connected to the account.</description>
        <inlineHelpText>Select a role.</inlineHelpText>
        <label>Connection to Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beneficial Owner</fullName>
                </value>
                <value>
                    <fullName>Beneficial Owner and Authorized Signer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Control_Interest_Type__c</fullName>
        <description>Defines the way the principal holds control over Borrower.</description>
        <label>Control Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>President</fullName>
                </value>
                <value>
                    <fullName>Chairman of the Board</fullName>
                </value>
                <value>
                    <fullName>Chief Executive Officer (CEO)</fullName>
                </value>
                <value>
                    <fullName>Other Officers of the Concern</fullName>
                </value>
                <value>
                    <fullName>Other Partners of the Concern</fullName>
                </value>
                <value>
                    <fullName>Directors of the Concern</fullName>
                </value>
                <value>
                    <fullName>Owner of the Concern</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Primary Borrower</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Connection</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Connected_From__c</columns>
        <columns>LLC_BI__Connected_To__c</columns>
        <columns>LLC_BI__Connection_Role__c</columns>
        <columns>LLC_BI__UID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CON_VR_Ownership_Percent_within_100</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
LLC_BI__Ownership_Percent__c  &gt; 1.0,
LLC_BI__Ownership_Percent__c  &lt; 0.0),
$User.No_Workflow__c = False
)</errorConditionFormula>
        <errorMessage>Ownership Percentage cannot exceed 100%. Please update the Ownership Percentage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Prevent_Edit_on_Connections</fullName>
        <active>false</active>
        <description>Deprecated, connections can be edited.</description>
        <errorConditionFormula>FALSE</errorConditionFormula>
        <errorMessage>Connections are not editable.</errorMessage>
    </validationRules>
</CustomObject>